fix nav alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1388,6 +1388,7 @@ a {
     ._main-navigation_znbpc_74 {
         width: 100rem;
         margin: 0 auto;
+        display: block;
     }
 }
 
